# visualflow

./: .env  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
docs/: ANALYSIS.md  TODO-future-improvements.md  architecture.md  core-tasks.json  design-foundations.md  poc0-comparison-matrix.md  research-diagram-tools.md  visual-feature-partition-dag-implementation.md  visual-feature-partition-dag-results.md  visual-milestone-details.md  visual-milestone.md  visual-poc-design.md  visual-poc0-implementation.md  visual-poc0-overview.md  visual-poc0-results.md  visual-poc1-implementation.md  visual-poc1-overview.md  visual-poc1-results.md  visual-poc2-implementation.md  visual-poc2-overview.md  visual-poc2-results.md  visual-poc3-implementation.md  visual-poc3-overview.md  visual-poc3-results.md  visual-poc4-implementation.md  visual-poc4-results.md  visual-tasks.json
src/visualflow/: __init__.py  models.py  partition.py  settings.py
src/visualflow/engines/: __init__.py  base.py  grandalf.py  graphviz.py
tests/: __init__.py  conftest.py  test_ascii_dag.py  test_canvas.py  test_core_milestone.py  test_engines.py  test_fanout_patterns.py  test_fixtures.py  test_grandalf.py  test_graphviz.py  test_integration.py  test_models.py  test_new_fixtures.py  test_partition.py  test_poc3_routing.py  test_real_diagrams.py  test_routing.py  test_unicode_exploration.py
tests/fixtures/: __init__.py  boxes.py  complex_graph.py  diamond.py  merge_branch.py  simple_chain.py  skip_level.py  standalone.py  wide_fanout.py
(+5 files in other folders)
