[project]
name = "visualflow"
version = "0.1.0"
description = "ASCII DAG visualization library with variable-sized boxes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grandalf>=0.8",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visualflow"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
pythonpath = ["src", "tests"]
