[project]
name = "visualflow"
version = "0.1.0"
description = "ASCII DAG visualization library with variable-sized boxes"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Dominic Chang" },
]
keywords = ["ascii", "dag", "diagram", "graph", "visualization", "terminal"]
requires-python = ">=3.11"
dependencies = [
    "grandalf>=0.8",
    "pydantic>=2.0",
    "python-dotenv>=1.2.1",
    "wcwidth>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visualflow"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
pythonpath = ["src", "tests"]
